--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -24,4 +24,4 @@
 application.args=
 javac.debug=true
 javadoc.preview=true
-user.properties.file=/home/roger/.netbeans/8.0.2/build.properties
+user.properties.file=C:\\Users\\Renato\\AppData\\Roaming\\NetBeans\\11.1\\build.properties
