--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -40,45 +40,111 @@ build.test.classes.dir=${build.dir}/test/classes
 build.test.results.dir=${build.dir}/test/results
 debug.classpath=\
     ${run.classpath}
+debug.modulepath=\
+    ${run.modulepath}
 debug.test.classpath=\
     ${run.test.classpath}
+debug.test.modulepath=\
+    ${run.test.modulepath}
 # This directory is removed when the project is cleaned:
 dist.dir=dist
 dist.jar=${dist.dir}/BenchmarkSQL-2.3.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.activation-1.1.1-sources.jar=lib\\activation-1.1.1-sources.jar
+file.reference.activation-1.1.1.jar=lib\\activation-1.1.1.jar
+file.reference.ant-1.6.5.jar=lib\\ant-1.6.5.jar
+file.reference.ant-contrib.jar=lib\\ant-contrib.jar
+file.reference.antlr-2.7.6.jar=lib\\antlr-2.7.6.jar
+file.reference.asm-3.1.jar=lib\\asm-3.1.jar
 file.reference.BenchmarkSQL-2.3-src=src
 file.reference.c3p0-0.9.1.2.jar=lib\\c3p0-0.9.1.2.jar
+file.reference.cglib-2.2.jar=lib\\cglib-2.2.jar
+file.reference.collections-generic-4.01.jar=lib\\collections-generic-4.01.jar
+file.reference.commons-beanutils-1.7.0.jar=lib\\commons-beanutils-1.7.0.jar
+file.reference.commons-beanutils-core-1.8.0.jar=lib\\commons-beanutils-core-1.8.0.jar
 file.reference.commons-cli-1.2.jar=lib\\commons-cli-1.2.jar
+file.reference.commons-codec-1.6.jar=lib\\commons-codec-1.6.jar
+file.reference.commons-collections-3.1.jar=lib\\commons-collections-3.1.jar
 file.reference.commons-collections-3.2.1.jar=lib\\commons-collections-3.2.1.jar
 file.reference.commons-collections15-4.01.jar=lib\\commons-collections15-4.01.jar
 file.reference.commons-configuration-1.6.jar=lib\\commons-configuration-1.6.jar
+file.reference.commons-digester-1.8.jar=lib\\commons-digester-1.8.jar
 file.reference.commons-io-2.2.jar=lib\\commons-io-2.2.jar
 file.reference.commons-jxpath-1.3.jar=lib\\commons-jxpath-1.3.jar
+file.reference.commons-lang-2.4.jar=lib\\commons-lang-2.4.jar
 file.reference.commons-lang-2.6.jar=lib\\commons-lang-2.6.jar
 file.reference.commons-logging-1.1.1.jar=lib\\commons-logging-1.1.1.jar
+file.reference.commons-logging-1.1.3.jar=lib\\commons-logging-1.1.3.jar
 file.reference.commons-math3-3.0.jar=lib\\commons-math3-3.0.jar
+file.reference.commons-pool-1.3.jar=lib\\commons-pool-1.3.jar
+file.reference.dom4j-1.6.1.jar=lib\\dom4j-1.6.1.jar
+file.reference.ganymed-ssh2-261.jar=lib\\ganymed-ssh2-261.jar
 file.reference.ganymed-ssh2-build250.jar=lib\\ganymed-ssh2-build250.jar
+file.reference.geronimo-jms_1.1_spec-1.0.1.jar=lib\\geronimo-jms_1.1_spec-1.0.1.jar
+file.reference.geronimo-jpa_3.0_spec-1.0.jar=lib\\geronimo-jpa_3.0_spec-1.0.jar
+file.reference.geronimo-jta_1.1_spec-1.1.jar=lib\\geronimo-jta_1.1_spec-1.1.jar
 file.reference.h2-1.3.163.jar=lib\\h2-1.3.163.jar
+file.reference.hamcrest-core-1.3.jar=lib\\hamcrest-core-1.3.jar
+file.reference.hibernate-annotations-3.5.6-Final.jar=lib\\hibernate-annotations-3.5.6-Final.jar
+file.reference.hibernate-commons-annotations-3.2.0.Final.jar=lib\\hibernate-commons-annotations-3.2.0.Final.jar
+file.reference.hibernate-core-3.3.0.GA.jar=lib\\hibernate-core-3.3.0.GA.jar
+file.reference.hibernate-entitymanager-3.6.10.Final.jar=lib\\hibernate-entitymanager-3.6.10.Final.jar
+file.reference.hibernate-jpa-2.0-api-1.0.0.Final.jar=lib\\hibernate-jpa-2.0-api-1.0.0.Final.jar
+file.reference.hsqldb-1.8.0.1.jar=lib\\hsqldb-1.8.0.1.jar
+file.reference.hsqldb-2.4.1.jar=lib\\hsqldb-2.4.1.jar
 file.reference.hsqldb.jar=lib\\hsqldb.jar
 file.reference.httpclient-4.3.1.jar=lib\\httpclient-4.3.1.jar
+file.reference.httpclient-4.3.jar=lib\\httpclient-4.3.jar
 file.reference.httpcore-4.3.jar=lib\\httpcore-4.3.jar
 file.reference.httpmime-4.3.1.jar=lib\\httpmime-4.3.1.jar
+file.reference.httpmime-4.3.jar=lib\\httpmime-4.3.jar
+file.reference.javassist-3.12.0.GA.jar=lib\\javassist-3.12.0.GA.jar
+file.reference.javax.persistence-2.0.5.jar=lib\\javax.persistence-2.0.5.jar
+file.reference.jaxb-api-2.3.0.jar=lib\\jaxb-api-2.3.0.jar
+file.reference.jaxb-core-2.3.0.jar=lib\\jaxb-core-2.3.0.jar
+file.reference.jaxb-impl-2.3.0.jar=lib\\jaxb-impl-2.3.0.jar
+file.reference.jdo2-api-2.3-eb.jar=lib\\jdo2-api-2.3-eb.jar
 file.reference.jdo2-index.jar=lib\\jdo2-index.jar
 file.reference.jpa2.jar=lib\\jpa2.jar
+file.reference.jta-1.1.jar=lib\\jta-1.1.jar
 file.reference.jtds-1.2.5.jar=lib\\jtds-1.2.5.jar
+file.reference.junit-3.8.1.jar=lib\\junit-3.8.1.jar
+file.reference.junit-4.11.jar=lib\\junit-4.11.jar
 file.reference.junit-4.4.jar=lib\\junit-4.4.jar
 file.reference.lib-hibernate=lib\\hibernate\\
 file.reference.log4j-1.2.15.jar=lib\\log4j-1.2.15.jar
+file.reference.log4j-1.2.17.jar=lib\\log4j-1.2.17.jar
 file.reference.log4jdbc4-1.2.jar=lib\\log4jdbc4-1.2.jar
 file.reference.monetdb-jdbc-2.9.jar=lib\\monetdb-jdbc-2.9.jar
 file.reference.mysql-connector-java-5.1.22.jar=lib\\mysql-connector-java-5.1.22.jar
+file.reference.mysql-connector-java-5.1.47-sources.jar=lib\\mysql-connector-java-5.1.47-sources.jar
+file.reference.mysql-connector-java-5.1.47.jar=lib\\mysql-connector-java-5.1.47.jar
 file.reference.opencsv-2.3.jar=lib\\opencsv-2.3.jar
 file.reference.openjpa-index-annotation.jar=lib\\openjpa-index-annotation.jar
+file.reference.openjpa-jdbc-1.0.0.jar=lib\\openjpa-jdbc-1.0.0.jar
+file.reference.openjpa-jdbc-5-1.0.0.jar=lib\\openjpa-jdbc-5-1.0.0.jar
+file.reference.openjpa-kernel-1.0.0.jar=lib\\openjpa-kernel-1.0.0.jar
+file.reference.openjpa-kernel-5-1.0.0.jar=lib\\openjpa-kernel-5-1.0.0.jar
+file.reference.openjpa-lib-1.0.0.jar=lib\\openjpa-lib-1.0.0.jar
+file.reference.openjpa-persistence-1.0.0.jar=lib\\openjpa-persistence-1.0.0.jar
+file.reference.openjpa-persistence-jdbc-1.0.0.jar=lib\\openjpa-persistence-jdbc-1.0.0.jar
+file.reference.org.eclipse.persistence.antlr-2.4.2.jar=lib\\org.eclipse.persistence.antlr-2.4.2.jar
+file.reference.org.eclipse.persistence.asm-2.4.2.jar=lib\\org.eclipse.persistence.asm-2.4.2.jar
+file.reference.org.eclipse.persistence.core-2.4.2.jar=lib\\org.eclipse.persistence.core-2.4.2.jar
+file.reference.org.eclipse.persistence.jpa-2.4.2.jar=lib\\org.eclipse.persistence.jpa-2.4.2.jar
+file.reference.org.eclipse.persistence.jpa.jpql-2.4.2.jar=lib\\org.eclipse.persistence.jpa.jpql-2.4.2.jar
+file.reference.persistence-api-1.0.jar=lib\\persistence-api-1.0.jar
+file.reference.postgresql-42.2.9.jar=lib\\postgresql-42.2.9.jar
 file.reference.postgresql-9.1-901.jdbc3.jar=lib\\postgresql-9.1-901.jdbc3.jar
 file.reference.postgresql-9.1-901.jdbc4.jar=lib\\postgresql-9.1-901.jdbc4.jar
+file.reference.serp-1.13.1.jar=lib\\serp-1.13.1.jar
+file.reference.slf4j-api-1.6.1.jar=lib\\slf4j-api-1.6.1.jar
 file.reference.slf4j-simple-1.7.5.jar=lib\\slf4j-simple-1.7.5.jar
 file.reference.sqlite-jdbc-3.6.20.1.jar=lib\\sqlite-jdbc-3.6.20.1.jar
+file.reference.sqlite-jdbc-3.6.20.jar=lib\\sqlite-jdbc-3.6.20.jar
+file.reference.transaction-api-1.1.jar=lib\\transaction-api-1.1.jar
+file.reference.xml-apis-1.0.b2.jar=lib\\xml-apis-1.0.b2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -113,10 +179,74 @@ javac.classpath=\
     ${file.reference.postgresql-9.1-901.jdbc4.jar}:\
     ${file.reference.slf4j-simple-1.7.5.jar}:\
     ${file.reference.sqlite-jdbc-3.6.20.1.jar}:\
-    ${libs.hibernate4-support.classpath}
+    ${libs.hibernate4-support.classpath}:\
+    ${file.reference.activation-1.1.1-sources.jar}:\
+    ${file.reference.activation-1.1.1.jar}:\
+    ${file.reference.ant-1.6.5.jar}:\
+    ${file.reference.ant-contrib.jar}:\
+    ${file.reference.antlr-2.7.6.jar}:\
+    ${file.reference.asm-3.1.jar}:\
+    ${file.reference.cglib-2.2.jar}:\
+    ${file.reference.collections-generic-4.01.jar}:\
+    ${file.reference.commons-beanutils-1.7.0.jar}:\
+    ${file.reference.commons-beanutils-core-1.8.0.jar}:\
+    ${file.reference.commons-codec-1.6.jar}:\
+    ${file.reference.commons-collections-3.1.jar}:\
+    ${file.reference.commons-digester-1.8.jar}:\
+    ${file.reference.commons-lang-2.4.jar}:\
+    ${file.reference.commons-logging-1.1.3.jar}:\
+    ${file.reference.commons-pool-1.3.jar}:\
+    ${file.reference.dom4j-1.6.1.jar}:\
+    ${file.reference.ganymed-ssh2-261.jar}:\
+    ${file.reference.geronimo-jms_1.1_spec-1.0.1.jar}:\
+    ${file.reference.geronimo-jpa_3.0_spec-1.0.jar}:\
+    ${file.reference.geronimo-jta_1.1_spec-1.1.jar}:\
+    ${file.reference.hamcrest-core-1.3.jar}:\
+    ${file.reference.hibernate-annotations-3.5.6-Final.jar}:\
+    ${file.reference.hibernate-commons-annotations-3.2.0.Final.jar}:\
+    ${file.reference.hibernate-core-3.3.0.GA.jar}:\
+    ${file.reference.hibernate-entitymanager-3.6.10.Final.jar}:\
+    ${file.reference.hibernate-jpa-2.0-api-1.0.0.Final.jar}:\
+    ${file.reference.hsqldb-1.8.0.1.jar}:\
+    ${file.reference.hsqldb-2.4.1.jar}:\
+    ${file.reference.httpclient-4.3.jar}:\
+    ${file.reference.httpmime-4.3.jar}:\
+    ${file.reference.javassist-3.12.0.GA.jar}:\
+    ${file.reference.javax.persistence-2.0.5.jar}:\
+    ${file.reference.jaxb-api-2.3.0.jar}:\
+    ${file.reference.jaxb-core-2.3.0.jar}:\
+    ${file.reference.jaxb-impl-2.3.0.jar}:\
+    ${file.reference.jdo2-api-2.3-eb.jar}:\
+    ${file.reference.jta-1.1.jar}:\
+    ${file.reference.junit-3.8.1.jar}:\
+    ${file.reference.junit-4.11.jar}:\
+    ${file.reference.log4j-1.2.17.jar}:\
+    ${file.reference.mysql-connector-java-5.1.47-sources.jar}:\
+    ${file.reference.mysql-connector-java-5.1.47.jar}:\
+    ${file.reference.openjpa-jdbc-1.0.0.jar}:\
+    ${file.reference.openjpa-jdbc-5-1.0.0.jar}:\
+    ${file.reference.openjpa-kernel-1.0.0.jar}:\
+    ${file.reference.openjpa-kernel-5-1.0.0.jar}:\
+    ${file.reference.openjpa-lib-1.0.0.jar}:\
+    ${file.reference.openjpa-persistence-1.0.0.jar}:\
+    ${file.reference.openjpa-persistence-jdbc-1.0.0.jar}:\
+    ${file.reference.org.eclipse.persistence.antlr-2.4.2.jar}:\
+    ${file.reference.org.eclipse.persistence.asm-2.4.2.jar}:\
+    ${file.reference.org.eclipse.persistence.core-2.4.2.jar}:\
+    ${file.reference.org.eclipse.persistence.jpa-2.4.2.jar}:\
+    ${file.reference.org.eclipse.persistence.jpa.jpql-2.4.2.jar}:\
+    ${file.reference.persistence-api-1.0.jar}:\
+    ${file.reference.postgresql-42.2.9.jar}:\
+    ${file.reference.serp-1.13.1.jar}:\
+    ${file.reference.slf4j-api-1.6.1.jar}:\
+    ${file.reference.sqlite-jdbc-3.6.20.jar}:\
+    ${file.reference.transaction-api-1.1.jar}:\
+    ${file.reference.xml-apis-1.0.b2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.modulepath=
+javac.processormodulepath=
 javac.processorpath=${javac.classpath}
 javac.source=${default.javac.source}
 javac.target=${default.javac.target}
@@ -124,6 +254,8 @@ javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
     ${libs.junit.classpath}
+javac.test.modulepath=\
+    ${javac.modulepath}
 javac.test.processorpath=${javac.test.classpath}
 javadoc.additionalparam=
 javadoc.author=false
@@ -147,7 +279,11 @@ run.classpath=\
 # (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value
 # or test-sys-prop.name=value to set system properties for unit tests):
 run.jvmargs=
+run.modulepath=\
+    ${javac.modulepath}
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
+run.test.modulepath=\
+    ${javac.test.modulepath}
 src.dir=${file.reference.BenchmarkSQL-2.3-src}
