--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -144,6 +144,7 @@ file.reference.slf4j-simple-1.7.5.jar=lib\\slf4j-simple-1.7.5.jar
 file.reference.sqlite-jdbc-3.6.20.1.jar=lib\\sqlite-jdbc-3.6.20.1.jar
 file.reference.sqlite-jdbc-3.6.20.jar=lib\\sqlite-jdbc-3.6.20.jar
 file.reference.transaction-api-1.1.jar=lib\\transaction-api-1.1.jar
+file.reference.voltdbclient-10.0.jar=D:\\Renato\\Downloads\\voltdb-developer-10.0\\voltdb-developer-10.0\\voltdb\\voltdbclient-10.0.jar
 file.reference.xml-apis-1.0.b2.jar=lib\\xml-apis-1.0.b2.jar
 includes=**
 jar.compress=false
@@ -241,7 +242,8 @@ javac.classpath=\
     ${file.reference.slf4j-api-1.6.1.jar}:\
     ${file.reference.sqlite-jdbc-3.6.20.jar}:\
     ${file.reference.transaction-api-1.1.jar}:\
-    ${file.reference.xml-apis-1.0.b2.jar}
+    ${file.reference.xml-apis-1.0.b2.jar}:\
+    ${file.reference.voltdbclient-10.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
